@@ -1,21 +1,21 @@
 1 ICON "../data/doom.ico"
 
 1 VERSIONINFO
-PRODUCTVERSION 1,3,0,0
-FILEVERSION 1,3,0,0
+PRODUCTVERSION 1,4,0,0
+FILEVERSION 1,4,0,0
 FILETYPE 1
 {
  BLOCK "StringFileInfo"
  {
   BLOCK "040904E4"
   {
-   VALUE "FileVersion", "1.3.0"
-   VALUE "FileDescription", "1.3.0"
+   VALUE "FileVersion", "1.4.0"
+   VALUE "FileDescription", "1.4.0"
    VALUE "InternalName", "Strawberry-Doom"
    VALUE "CompanyName", "Strawberry-Doom"
    VALUE "LegalCopyright", "GNU General Public License"
    VALUE "ProductName", "Strawberry-Doom"
-   VALUE "ProductVersion", "1.3.0"
+   VALUE "ProductVersion", "1.4.0"
   }
  }
 }
