@@ -32,21 +32,21 @@
 #endif
 
 1 VERSIONINFO
-PRODUCTVERSION 1,3,0,0
-FILEVERSION 1,3,0,0
+PRODUCTVERSION 1,4,0,0
+FILEVERSION 1,4,0,0
 FILETYPE 1
 BEGIN
 	BLOCK "StringFileInfo"
 	BEGIN
 		BLOCK "040904E4"
 		BEGIN
-			VALUE "FileVersion", "1.3.0"
-			VALUE "FileDescription", "Strawberry Doom 1.3.0"
+			VALUE "FileVersion", "1.4.0"
+			VALUE "FileDescription", "Strawberry Doom 1.4.0"
 			VALUE "InternalName", "strawberry-doom"
 			VALUE "CompanyName", "ghostlydeath@remood.org"
 			VALUE "LegalCopyright", "GNU General Public License"
 			VALUE "ProductName", "Strawberry Doom"
-			VALUE "ProductVersion", "1.3.0"
+			VALUE "ProductVersion", "1.4.0"
 		END
 	END
 END
