@@ -24,6 +24,13 @@ Chocolate Doom 1.4.0 (2010-??-??):
 	* Warnings are now generated for invalid dehacked replacements of
 	  printf format strings.  Some potential buffer overflows are
 	  also checked.
+      * The installation instructions (INSTALL file) have been
+        clarified and made more platform-agnostic.
+      * The mouse is no longer warped to the center of the screen when
+        the demo sequence advances.
+      * Key bindings can now be changed for the demo recording quit key
+        (normally 'q') and the multiplayer messaging keys (normally
+        't', 'g', 'i', 'b' and 'r').
 
 Chocolate Doom 1.3.0 (2010-02-10):
 
